--- a/my_version_index.html
+++ b/my_version_index.html
@@ -25,10 +25,10 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://pbs.twimg.com/media/FuqJtZgXgAEb0nq.jpg:large" alt="Spider-Man: Across the Spider-verse (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Spider-Man: Across the Spider-verse (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -42,17 +42,17 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Depois de se reunir com Gwen Stacy, Homem-Aranha é jogado no multiverso, onde ele encontra uma equipe encarregada de proteger sua própria existência.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://assets-prd.ignimgs.com/2023/02/03/foevbcsayamvqpf-1675462826997.jpg" alt="Super Mario Bros (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Super Mario Bros (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -66,17 +66,17 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://m.media-amazon.com/images/I/61IRaGJBOIL._AC_UF894,1000_QL80_.jpg" alt="Scream VI (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Scream (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Sam, Tara, Chad e Mindy, os quatro sobreviventes do massacre realizado pelo Ghostface, decidem deixar Woodsboro para trás em busca de um novo começo em Nova York. Mas não demora muito para eles se tornarem alvo de um novo serial killer.</span>
         </div>
       </div>
     </div>
