--- a/new_version_index.html
+++ b/new_version_index.html
@@ -91,10 +91,12 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Sam, Tara, Chad e Mindy, os quatro sobreviventes do massacre realizado pelo Ghostface, decidem deixar Woodsboro para trás em busca de um novo começo em Nova York. Mas não demora muito para eles se tornarem alvo de um novo serial killer.</span>
+          <span>Sam, Tara e Chad, os três sobreviventes do massacre realizado pelo Ghostface, decidem deixar Woodsboro para trás em busca de um novo começo em Nova York. Mas não demora muito para eles se tornarem alvo de um novo serial killer.</span>
         </div>
       </div>
     </div>
   </main>
 </body>
 </html>
+
+<!-- Dia 5 -->
