--- a/my_version_index.html
+++ b/my_version_index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Sam, a sobrevivente do massacre realizado pelo Ghostface, decidem deixar Woodsboro para trás em busca de um novo começo em Nova York. Mas não demora muito para eles se tornarem alvo de um novo serial killer.</span>
+          <span>Sam, a sobrevivente do massacre realizado pelo GhostFace, decidem deixar Woodsboro para trás em busca de um novo começo em Nova York. Mas não demora muito para eles se tornarem alvo de um novo serial killer.</span>
         </div>
       </div>
     </div>
