--- a/my_version_index.html
+++ b/my_version_index.html
@@ -15,7 +15,8 @@
     <h2>Filmes Populares</h2>
     <div class="input-container">
       <input type="text" name="movie-name" id="movie-name" placeholder="Digite algum filme para pesquisar...">
-      <img src="images/search-icon.svg" alt="Ícone de pesquisa" class="searchIcon">
+      <!-- <img src="images/search-icon.svg" alt="Ícone de pesquisa" class="searchIcon"> -->
+      <img align="right" alt="Search Icon" height="258" width="258" src="https://cdn-icons-png.flaticon.com/512/64/64673.png">
     </div>
     <div class="showOnlyFavorites">
       <input type="checkbox" name="onlyFavorites" id="onlyFavorites">
