--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="https://pbs.twimg.com/media/FuqJtZgXgAEb0nq.jpg:large" alt="Spider-Man: Across the Spider-verse (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Spider-Man: Across the Spider-verse (2023)</h4>
+            <h4>Homem-Aranha: Através do Aranhaverso (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -52,7 +52,7 @@
             <img src="https://assets-prd.ignimgs.com/2023/02/03/foevbcsayamvqpf-1675462826997.jpg" alt="Super Mario Bros (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Super Mario Bros (2023)</h4>
+            <h4>Super Mario Bros. (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
@@ -76,7 +76,7 @@
             <img src="https://m.media-amazon.com/images/I/61IRaGJBOIL._AC_UF894,1000_QL80_.jpg" alt="Scream VI (2023)"/>
           </div>
           <div class="movie-text">
-            <h4>Scream (2023)</h4>
+            <h4>Pânico VI (2023)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
