--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Uma jovem sereia faz um acordo com uma bruxa do mar para trocar sua bela voz por pernas humanas para que possa descobrir o mundo acima da água e impressionar um príncipe.</span>
+          <span>Uma jovem sereia faz um acordo com uma bruxa do mar para trocar sua bela voz por pernas humanas, para que possa descobrir o mundo acima da água e impressionar um príncipe.</span>
         </div>
       </div>
       <div class="movie">
